name:                yapp
version:             0.1.0.0
synopsis:            Yet Another Polymorphic Prelude
description:         A Prelude that's as general as possible.
homepage:            https://github.com/bb010g/yapp
license:             0BSD
license-file:        LICENSE
author:              Dusk Banks
maintainer:          me@bb010g.com
-- copyright:           
category:            Control, Prelude
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/bb010g/yapp

library
  exposed-modules:     YAPP
  build-depends:       base >=4.7 && <4.8
               ,       semigroups >=0.15 && < 0.16
               ,       semigroupoids >=4.0 && < 4.3
  hs-source-dirs:      src
